# nano-strix

./: .gitignore  CLAUDE.md  Dockerfile.sandbox  README.md  pyproject.toml
docs/: scheduler.md  tools.md
docs/superpowers/plans/: 2026-05-18-nano-strix-core-architecture.md  2026-05-19-cli-completion-plan.md  2026-05-20-per-file-agent-plan.md  2026-05-21-deep-analysis-agent-graph-plan.md  2026-05-22-docker-sandbox-upgrade.md  2026-05-25-deep-analysis-logging.md  2026-05-26-deep-analysis-harness.md
docs/superpowers/specs/: stage-scheduler-interface.md  (+6 more)
logs/: graph.jsonl  llm.jsonl  tools.jsonl
src/nano_strix/: __init__.py  cli.py
tests/: test_agent_subclasses.py  test_agents_base.py  test_agents_manager.py  test_bus_events.py  test_bus_queue.py  test_cli.py  test_config.py  test_deep_agent.py  test_deep_analysis_entry.py  test_deep_analysis_integration.py  test_deep_analysis_logging.py  test_deep_analysis_stage_integration.py  test_docker_sandbox.py  test_graph_logging.py  test_graph_primitives.py  test_graph_state.py  test_harness_contracts.py  test_harness_hooks.py  test_llm_adapter.py  test_llm_anthropic.py  test_llm_registry.py  test_logging.py  test_manifest_merge.py  test_openai_provider.py  test_orchestrator_runner.py  test_per_file_agent.py  test_per_file_manifest.py  test_prompts.py  test_report_generator.py  test_sandbox_base.py  test_sandbox_process.py  test_scheduler.py  test_shared_models.py  test_skills.py  test_tool_server.py  test_tools_argument_parser.py  test_tools_executor.py  test_tools_file_ops.py  test_tools_registry.py  test_tools_scanner.py  (+1 more)
(+77 files in other folders)
