[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nano-strix"
version = "0.1.0"
description = "A CLI application"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
nano-strix = "nano_strix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_strix"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
